- (squash) small fixes

--- a/cfgov/unprocessed/apps/paying-for-college/css/college-costs/college-costs.less
+++ b/cfgov/unprocessed/apps/paying-for-college/css/college-costs/college-costs.less
@@ -129,6 +129,10 @@
 				}
 			}
 
+			&_about {
+				margin-top: unit( @grid_gutter-width / @base-font-size-px, em );
+			}
+
 		}
 	}
 
